# kruft

./: CMakeLists.txt
include/: krbit.h  krckdint.h  krlib.h  krmath.h
tests/: CMakeLists.txt  t_ckdint.inl  t_math.inl  test_cxx.cpp
